# trainee-hub

./: README.md  main.py  pyproject.toml
requirements/: dev.txt
src/application/dto/: __init__.py  check_dto.py  mentor_dto.py  status_dto.py  technology_dto.py  trainee_dto.py  user_dto.py
src/application/repositories/: __init__.py  i_check_question_repository.py  i_check_question_result_repository.py  i_learned_technology_repository.py  i_learning_session_log_repository.py  i_status_feedback_repository.py  i_status_update_repository.py  i_technology_review_repository.py  i_trainee_technology_state_repository.py  i_user_repository.py
src/application/services/: trainee_service.py
src/core/domain/: __init__.py  models.py
src/core/exceptions/: __init__.py  exceptions.py
