[project]
name = "trainee-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "crontab>=1.0.5",
    "fastapi[standard]>=0.119.1",
    "flower>=2.0.1",
    "google-api-python-client>=2.185.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "python-crontab>=3.3.0",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.4.0",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
